snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1-all.jar.sha512
5a41eebc52b263b07d162ae5006d5c6d6cd58c836a812310703b6f503752b68f20f53322b6654d610853798969669086779a5a274206cdc4f5db01d07aa39de7